--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
                 Vamos a tener una gran fiesta. <br />
                 (To do: Vender mejor la idea. Agregar imagenes o algo.)
             </div>
+            <a asp-action="RsvpForm">Reserva ahora</a>
         </div>
     </body>
 </html>
