Listado de confirmacion

--- a/Views/Home/Gracias.cshtml
+++ b/Views/Home/Gracias.cshtml
@@ -17,6 +17,6 @@
             @:Una pena saber que no asistirás, pero gracias por avisarnos.
         }
     </div>
-    Click <a asp-action="ListResponses">aquí</a> para ver quien asistirá.
+    Click <a asp-action="VerInvitados">aquí</a> para ver quien asistirá.
 </body>
 </html>
