Validación con asp-validation-summary=All

--- a/Views/Home/RsvpForm.cshtml
+++ b/Views/Home/RsvpForm.cshtml
@@ -11,6 +11,7 @@
     </head>
     <body>
         <form asp-action="RsvpForm" method="POST">
+            <div asp-validation-summary=All></div>
             <div>
                 <label asp-for="Nombre">Tu nombre:</label>
                 <input asp-for="Nombre" />
