--- a/Views/Home/RsvpForm.cshtml
+++ b/Views/Home/RsvpForm.cshtml
@@ -8,6 +8,7 @@
     <head>
         <meta name="viewport" content="width=device-width" />
         <title>Forma de Reservacion</title>
+        <link rel="stylesheet" href="/css/styles.css" />
     </head>
     <body>
         <form asp-action="RsvpForm" method="POST">
