Se agregan estilos de bootstrap 4

--- a/Views/Home/Gracias.cshtml
+++ b/Views/Home/Gracias.cshtml
@@ -6,9 +6,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <title>Gracias</title>
 </head>
-<body>
+<body class="text-center">
     <div>
         <h1>Gracias, @Model.Nombre!</h1>
         @if (Model.Asistira == true) {
